# stern_attack

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  decoding.cpp  gauss_elimination.cpp  graph.py  sorting.cpp  syndrome.txt
examples/: CMakeLists.txt  create_data.py  example_cracking.cpp
examples/decoding_challenge_1041/: check_matrix.txt  check_matrix_before.txt  syndrome.txt
examples/decoding_challenge_1409/: check_matrix.txt  syndrome.txt
examples/decoding_challenge_381/: check_matrix.txt
examples/decoding_challenge_640/: check_matrix.txt  syndrome.txt
include/algebra/: binary_matrix.hpp
include/permutations/: combination_iterator.hpp  permutation_base.hpp  primitive_permutation_iterator.hpp  random_permutation_iterator.hpp
include/stern_attack/: base_decoding.hpp  fs-isd_algorithm.hpp  hash_mmt_algorithm.hpp  information_set_decoding.cpp  information_set_decoding.hpp  mmt_algorithm.hpp  new_stern_algorithm.hpp  stern_algorithm.hpp
include/utils/: benchmark.hpp  cartesian_product.hpp  radixsort.hpp
src/algebra/: binary_matrix.hpp
tests/: CMakeLists.txt
tests/algebra/: binary_matrix.cpp  test_binary_matrix.cpp
tests/permutations/: combination.cpp  helper.hpp  primitive_permutation.cpp
tests/stern_attack/: helper.hpp  information_set_decoding.cpp
tests/test_data/: check_matrix_small.txt  compute_syndrome.py  syndrome_small.txt
tests/test_data/big1/: check_matrix.txt  codeword.txt  error_syndrome.txt  error_vector.txt  syndrome.txt
tests/test_data/big2/: check_matrix.txt  codeword.txt  error_vector.txt  syndrome.txt
tests/test_data/big3/: check_matrix.txt  codeword.txt  error_vector.txt  syndrome.txt
tests/test_data/big4/: check_matrix.txt  codeword.txt  error_vector.txt  syndrome.txt
tests/test_data/medium1/: check_matrix.txt  codeword.txt  error_vector.txt  syndrome.txt
tests/test_data/medium2/: check_matrix.txt  codeword.txt  error_vector.txt  syndrome.txt
tests/test_data/medium3/: codeword.txt  error_syndrome.txt
tests/test_data/medium4/: check_matrix.txt  codeword.txt  error_syndrome.txt  error_vector.txt
tests/test_data/small/: check_matrix.txt  error_vector.txt
tests/test_data/small1/: codeword.txt
tests/test_data/small2/: codeword.txt  error_vector.txt
tests/utils/: radixsort.cpp
